--- a/pages/order-setup/order-setup.wxml
+++ b/pages/order-setup/order-setup.wxml
@@ -25,10 +25,10 @@
         <view class="list_right color_f2">{{price}}元/小时</view>
         <view style="clear:both;"></view>
     </view>
-    <view class="list">计费标准</view>
+    <view class="list" style="height: 45px;line-height: 45px;">计费标准</view>
     <view class="jifei">归还时按{{price}}元/小时计算，微信自动扣款，每24小时风封顶30元，单次使用封顶{{deviceInfo.high_price}}元</view>
 </view>
 <view class="button-sp-area">
     <button  class="weui-btn btnbottom"  plain="true" bindtap="OrderSet">确认租借</button>
 </view>
-<view class="bottom_title">确认租借即同意用户协议</view>
+<!-- <view class="bottom_title">确认租借即同意用户协议</view> -->
